<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerCancion" android:background="@drawable/images">

    <android.support.v7.widget.Toolbar
            android:layout_width="387dp"
            android:layout_height="47dp"
            android:background="#07008577"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.026"/>
    <Button
            android:text="@string/lbl_cancion"
            android:layout_width="86dp"
            android:layout_height="49dp"
            android:id="@+id/btnCancion"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/btn_atras"
            app:layout_constraintStart_toEndOf="@+id/btn_atras" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_atras" app:layout_constraintVertical_bias="0.4"
            android:backgroundTint="#03FFFFFF" android:textSize="12sp" android:drawableTint="#03FFFFFF"/>
    <Button
            android:text="@string/lbl_letra"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/btnCancion"
            app:layout_constraintTop_toTopOf="@+id/btnCancion" app:layout_constraintBottom_toBottomOf="@+id/btnCancion"
            android:drawableTint="#03FFFFFF" android:backgroundTint="#08FFFFFF"
            android:textSize="12sp" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/lbl_video"
            android:layout_width="70dp"
            android:layout_height="49dp"
            android:id="@+id/button3"
            app:layout_constraintBottom_toBottomOf="@+id/button2" app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="#05FFFFFF" android:textSize="12sp"/>
    <ImageButton
            android:layout_width="38dp"
            android:layout_height="38dp" app:srcCompat="@drawable/ic_arrow_back_black_24dp"
            android:id="@+id/btn_atras"
            app:layout_constraintTop_toTopOf="@+id/toolbar" app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="@+id/toolbar" android:layout_marginStart="8dp"
            android:backgroundTint="#03FFFFFF" android:foregroundTint="#FCFFFFFF"
            android:contentDescription="@string/lbl_atras"/>
    <ImageButton
            android:layout_width="35dp"
            android:layout_height="36dp" app:srcCompat="@drawable/ic_share_black_24dp"
            android:id="@+id/btn_compartir"
            android:backgroundTint="#08FFFFFF" app:layout_constraintStart_toEndOf="@+id/button3"
            android:layout_marginStart="68dp"
            app:layout_constraintBottom_toBottomOf="@+id/button3" app:layout_constraintTop_toTopOf="@+id/button3"
            android:tint="#070707" app:layout_constraintVertical_bias="0.307"
            android:contentDescription="@string/lbl_compartir"/>
    <ImageButton
            android:layout_width="85dp"
            android:layout_height="77dp" app:srcCompat="@drawable/play2" android:id="@+id/imageButton5"
            android:backgroundTint="#0AFFFFFF" android:contentDescription="@string/lbl_play"
            app:layout_constraintStart_toStartOf="@+id/img_verCaratula"
            app:layout_constraintEnd_toEndOf="@+id/img_verCaratula"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/img_verCaratula"/>
    <TextView
            android:text="@string/lbl_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_ver_Titulo" app:layout_constraintEnd_toEndOf="@+id/imageButton5"
            app:layout_constraintStart_toStartOf="@+id/imageButton5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imageButton5" app:layout_constraintHorizontal_bias="0.486"
            android:textColor="#070707" android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/lbl_artista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_ver_Artista" app:layout_constraintEnd_toEndOf="@+id/txv_ver_Titulo"
            app:layout_constraintStart_toStartOf="@+id/txv_ver_Titulo" app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintTop_toBottomOf="@+id/txv_ver_Titulo"
            android:textSize="14sp" android:textColor="#E81B1A1A" android:textStyle="italic"/>
    <ImageView
            android:layout_width="267dp"
            android:layout_height="89dp"
            app:srcCompat="@drawable/footer"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/txv_ver_Artista"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_ver_Artista"
            app:layout_constraintEnd_toEndOf="@+id/txv_ver_Artista"
            android:contentDescription="@string/lbl_pie"/>
    <ImageView
            android:layout_width="228dp"
            android:layout_height="205dp"
            android:id="@+id/img_verCaratula"
            android:src="@mipmap/cover1"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/btn_atras" app:layout_constraintHorizontal_bias="0.466"
            android:contentDescription="@string/lbl_caratula"/>
</android.support.constraint.ConstraintLayout>