<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/rv_constraint">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@mipmap/cover1"
            android:id="@+id/img_item_play" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.027" app:layout_constraintVertical_bias="0.013"
            android:contentDescription="@string/lbl_caratula"/>
    <TextView
            android:text="@string/lbl_titulo"
            android:layout_width="166dp"
            android:layout_height="21dp"
            android:id="@+id/txv_item_titulo"
            app:layout_constraintTop_toTopOf="@+id/img_item_play"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_play"
            app:layout_constraintStart_toEndOf="@+id/img_item_play" android:layout_marginStart="20dp"
            app:layout_constraintVertical_bias="0.098" android:textStyle="bold" android:textSize="14sp"/>
    <TextView
            android:text="@string/lbl_artista"
            android:layout_width="168dp"
            android:layout_height="19dp"
            android:id="@+id/txt_item_artista" app:layout_constraintStart_toStartOf="@+id/txv_item_titulo"
            app:layout_constraintEnd_toEndOf="@+id/txv_item_titulo" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txv_item_titulo"
            android:textStyle="italic" android:textSize="12sp"/>
    <TextView
            android:text="@string/lbl_Album"
            android:layout_width="167dp"
            android:layout_height="22dp"
            android:id="@+id/txt_item_album" app:layout_constraintStart_toStartOf="@+id/txt_item_artista"
            app:layout_constraintEnd_toEndOf="@+id/txt_item_artista" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_item_artista" android:textStyle="italic"
            android:textSize="12sp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/play"
            android:id="@+id/btn_item_play"
            app:layout_constraintTop_toTopOf="@+id/img_item_play"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_play"
            app:layout_constraintStart_toEndOf="@+id/img_item_play" android:layout_marginStart="208dp"
            app:layout_constraintVertical_bias="0.591" android:contentDescription="@string/lbl_play"/>
</android.support.constraint.ConstraintLayout>