<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/relativeLayout">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/music_heart"
            android:id="@+id/imgCaratula" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.024" app:layout_constraintVertical_bias="0.012"
            android:contentDescription="@string/lbl_Album"/>
    <TextView
            android:text="@string/lbl_titulo"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:id="@+id/txvTitulo"
            app:layout_constraintTop_toTopOf="@+id/imgCaratula"
            app:layout_constraintBottom_toBottomOf="@+id/imgCaratula"
            app:layout_constraintStart_toEndOf="@+id/imgCaratula" android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.0" android:textStyle="bold"/>
    <TextView
            android:text="@string/lbl_artista"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:id="@+id/txvArtista" app:layout_constraintStart_toStartOf="@+id/txvTitulo"
            app:layout_constraintEnd_toEndOf="@+id/txvTitulo" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txvTitulo" android:textSize="12sp"/>
    <TextView
            android:text="@string/lbl_Album"
            android:layout_width="150dp"
            android:layout_height="20dp"
            android:id="@+id/txtAlbum"
            app:layout_constraintStart_toStartOf="@+id/txvArtista"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/txvArtista" app:layout_constraintEnd_toEndOf="@+id/txvArtista"
            android:textSize="12sp"/>
</android.support.constraint.ConstraintLayout>
